# HuaiJin-Quant

./: .gitignore  README.md  calendar_utils.py  config_template.py  example_strategy.py  interfaces.py  ledger.py  pyproject.toml  run_demo.py  strict_backtester.py
